force-app/main/default/objects/Article__c/Article__c.object-meta.xml
<CustomObject>
    <label>Article</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>