force-app/main/default/objects/Article__c/fields/Caracteristiques__c.field-meta.xml
<CustomField>
    <fullName>Caracteristiques__c</fullName>
    <label>Caractéristiques</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>