force-app/main/default/objects/Article__c/fields/Image_Type__c.field-meta.xml
<CustomField>
    <fullName>Image_Type__c</fullName>
    <label>Image MIME Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>