force-app/main/default/objects/Article__c/fields/M_tiers__c.field-meta.xml
<CustomField>
    <fullName>M_tiers__c</fullName>
    <label>Métiers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACFI</fullName>
            </value>
            <value>
                <fullName>ACFI - STOCK</fullName>
            </value>
            <value>
                <fullName>ADJOINT AU DIRECTEUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>