force-app/main/default/objects/Article__c/fields/Nom_de_l_article__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_l_article__c</fullName>
    <label>Nom de l&apos;article</label>
    <type>TextArea</type>
</CustomField>