force-app/main/default/objects/Article__c/fields/Tailles_disponibles__c.field-meta.xml
<CustomField>
    <fullName>Tailles_disponibles__c</fullName>
    <label>Tailles disponibles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>39</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>41</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>43</fullName>
            </value>
            <value>
                <fullName>44</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>46</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>