force-app/main/default/objects/Article__c/fields/Type_d_article__c.field-meta.xml
<CustomField>
    <fullName>Type_d_article__c</fullName>
    <label>Type d&apos;article</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blouse</fullName>
            </value>
            <value>
                <fullName>Bottes</fullName>
            </value>
            <value>
                <fullName>Casque</fullName>
            </value>
            <value>
                <fullName>Gants</fullName>
            </value>
            <value>
                <fullName>Masque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>