force-app/main/default/objects/Article__c/fields/URL_Image__c.field-meta.xml
<CustomField>
    <fullName>URL_Image__c</fullName>
    <label>URL Image</label>
    <type>Url</type>
</CustomField>