force-app/main/default/objects/Article__c/fields/Usage_recommande__c.field-meta.xml
<CustomField>
    <fullName>Usage_recommande__c</fullName>
    <label>Usage recommandé</label>
    <type>TextArea</type>
</CustomField>