force-app/main/default/objects/Article__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Caracteristiques__c</columns>
    <columns>Description__c</columns>
    <columns>Usage_recommande__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>